# jbrowse-plugin-assistant-chatbot

./: .env  .eslintrc.js  .gitignore  .prettierrc.json  AUTHORS  README.md  jbrowse_config.json  package-lock.json  package.json  postcss.config.js  pyproject.toml  rollup.config.js  rollup.config.mjs  tsconfig.json
.github/workflows/: integration.yml
cypress/fixtures/: hello_view.json
jb-bot/: .gitignore  ChatBot.py  app.py  pyproject.toml  util.py
jb-bot/jb-bot/: ChatBot.py  LangChainChatBot.py  app.py  test.py  util.py
scripts/: setup.ts
src/: declare.d.ts  index.ts
src/ChatbotWidget/: index.ts  stateModel.ts
src/ChatbotWidget/components/: ChatbotWidget.css  ChatbotWidget.test.tsx  ChatbotWidget.tsx
src/HelloView/: stateModel.ts
src/HelloView/components/: HelloView.test.tsx
src/JBrowseAssistant/: LocalLangchainAdapter.ts  index.ts
src/JBrowseAssistant/agent/: ChatAgent.ts  ChatLLMCallbackHandler.ts  ChatModel.ts  ResponseParser.ts
src/JBrowseAssistant/components/: ApiKeyManager.tsx  ApiKeyVault.tsx  ChatbotWidget.tsx  LocalLangchainProvider.tsx  McpProvider.tsx  SettingsForm.tsx
src/JBrowseAssistant/tools/: AddTemporaryAssemblyTool.ts  AddTrackTool.ts  ApiKeyVault.ts  BaseTool.ts  EnsureViewTool.ts  ExportViewTool.ts  FindFeatureTool.ts  JBrowseConfig.ts  JBrowseDocumentation.ts  ListAssembliesTool.ts  ListTracksTool.ts  NavigateGenomeTool.ts  NavigateLGVTool.ts  NavigateLinearGenomeView.ts  NavigateTool.ts  OpenViewTool.ts  OpenViewTool.tsx  SearchAndNavigateLGVTool.ts  SearchFeaturesTool.ts  SessionSnapshotTool.ts  SetCompactDisplayTool.ts  SetTrackVisibilityTool.ts  ToggleTracksTool.ts  ToolEnvelope.ts  V1_TOOL_SCHEMAS.md  ViewsTool.ts  base.ts  base.tsx  factory.ts  index.ts
src/chat/: ChatAgent.ts
src/components/assistant-ui/: attachment.tsx  markdown-text.tsx  thread-list.tsx  thread.tsx  tool-fallback.tsx  tooltip-icon-button.tsx
src/components/ui/: button.tsx  dialog.tsx  field.tsx  form.tsx  input-group.tsx  popover.tsx  select.tsx  tooltip.tsx
src/lib/: utils.ts  vault.ts
src/styles/: globals.css
web-app/: package.json
web-app/src/: util.tsx
web-app/src/app/: globals.css  layout.tsx  page.tsx
web-app/src/components/: Chat.tsx  ChatFooter.tsx  (+5 more)
(+6 files in other folders)
