[tool.poetry]
name = "jb-bot"
version = "0.1.0"
description = "A tool for querying your JBrowse configuration file."
authors = ["Caroline Bridge <cbridge@oicr.on.ca>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index-core = "^0.10.58"
llama-index-embeddings-gemini = "^0.1.8"
llama-index-llms-gemini = "^0.1.11"
llama-index-readers-file = "^0.1.31"
grpcio = "1.60.1"
llama-index-multi-modal-llms-gemini = "^0.1.7"
llama-index-llms-openai = "^0.1.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
