[tool.poetry]
name = "jb-bot"
version = "0.1.0"
description = "A tool for querying your JBrowse configuration file."
authors = ["Caroline Bridge <cbridge@oicr.on.ca>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index-core = "^0.11.10"
llama-index-embeddings-gemini = "^0.2.0"
llama-index-llms-gemini = "^0.3.5"
llama-index-readers-file = "^0.2.2"
grpcio = "1.60.1"
llama-index-multi-modal-llms-gemini = "^0.3.1"
llama-index-llms-openai = "^0.2.9"
flask = "^3.0.3"
flask-cors = "^5.0.0"
python-dotenv = "^1.0.1"
llama-index-embeddings-openai = "^0.2.5"
llama-index-readers-remote = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
